Adding More FAA 107 Notes

--- a/books/flying/drones/faa-107.md
+++ b/books/flying/drones/faa-107.md
@@ -315,8 +315,224 @@ If you don't have the dexterity to operate, or visually impaired in some way to 
 
 No medical certificates are required to operate under Part 107. 
 
+107.29 defines rules for night time operations. Night is defined as the end of evening civil twilight and beginning of morning civil twilight as published in the air almanac converted to local time. 30 minutes before and after sunrise or sunset. 
+
+* Passed the knowledge test after April 6, 2021
+* Your aircraft must have an anti collision light that is visible for at least 3 statute miles and it must be a flashing light with sufficient flashing rates to avoid collision. The intensity of the light may be reduced if the pilot in command determines it is safe to do so. 
+
+The drone must have the anti collision light. No additional training requirements are required. 
+
+107.31 talks about visual line of sight aircraft operations - The pilot and the visual observer must be able to see the unmanned aircraft throughout the entire flight with vision that is unaided by any device other than corrective lenses. Here is the definition of the visual line of sight
+
+* Aircraft's location
+* Aircraft's altitude, attitude and direction of flight
+* Air traffic and hazards in the airspace
+* You need to determine if the aircraft doesn't endanger life or property of others. 
+* FPV doesn't satisfy the visual line of sight requirements. FPV operator still needs a visual observer
+
+107.33 Visual Observer requirements are discussed in this section. A visual observer is not required. But if you are using one, you need to adhere to the following requirements
+
+* Maintain effective communications between visual observer, person working on flight controls and the remote pilot in command. 
+* Visual observer must be able to see the aircraft unaided. 
+* Everyone that is part of the crew must coordinate to scan the airspace for any potential collision hazard. 
+* A person cannot operate  or act as a remote PIC or visual observer in the operation of more than one aircraft at a time. 
+
+107.36 talks about carrying hazardous material. Hazardous material is described as any substance or material that is capable of posing an unreasonable risk to health, safety and property. 
+
+107.37 talks about operating near other aircraft and right of way rules. Drones do not have the right of way. Give way to all other aircraft. You can pass over, under or ahead unless it is well clear. 
+
+107.39 talks about operation over human beings. No flying over humans allowed unless
+
+* If the human being is directly involved in the operation
+* Located under a covered structur or inside a stationary vehicle that can protect them
+* If the operation meets the requirements of at least one of the operational categories under subpart D. 
+
+107.41 talks about which airspace is allowed. Flying in controlled airspace (Class B, C, D or E2) is not allowed unless prior authorization is received from ATC. Same thing for prohibited/restricted airspace or areas activated by NOTAM. 
+
+107.43 talks about operations in the vicinity of an airport. No person may operate aircraft in a manner that interferes with operations and traffic patterns at any airport, heliport or seaplane base. Always get authorization from the airspace controlling agency. 
+
+107.49 lays out preflight requirements. The RPIC should do the following
+* Check local weather conditions
+* Check airspace requirements and flight restrictions
+* Check for the location of persons or property on the surface
+* Check for other ground hazards
+* You are also required to ensure that all the persons who are participating in the flight are informed about the operating conditions, emergency procedures, contingency producedures, roles, responsibilities and potential hazards.
+* Ensure that the control link between ground control station and the aircraft are working properly. 
+* If the aircraft is a powered aircraft, ensure that there is enough available power. 
+* Ensure that any object that is attached or carried is secure and doesn't adversely affect the flight characteristics or controllability of aircraft. 
+
+107.51 talks about operating limitations. 
+* You can fly 400 ft above the ground. Remember that you might have taken off at a different spot. So, you have to constantly monitor your altitude with respect to ground level. You are required to maintain the altitude regardless of topography.
+
+400 feet rules applies unless
+* You are in uncontrolled airspace
+* It is flown with in 400 foot radius of a structure
+* Does not fly higher than 400 feet above the structure's immediate upper limit
+
+You have to be 500 ft below the clouds and 2000 ft away from the clouds. Check for reported cloud cover. Visibility is always reported in statute miles. This is also reported by airports. Minimum 3 statute miles visibility required. Speed limit for aircraft is 100 mph or 87knts. 
+
+Automated operations - Pre planned and push a button. As a remote pilot in command, you must have the ability to control the routing and other commands at all time. If there is a lost link, the drone should be programmed to return home ASAP or get to ground ASAP. You can automate away multiple aircraft at the same time. 
+
 ### Part 107 Sub Part C - Remote Pilot Certification
+107.61 talks about who can be eligible for remote pilot in command. 16 years of age, read, write and speak English and a knowledge test. 
+
+107.64 - A temporary remote pilot certificate is valid for 120 days. You can get an extension if you don't get a permanent certificate. 
+
+107.65 - In the past 24 calendar months
+* Aeronautical knowledge test
+* Complete recurrent training. FAA hosts the training. 
+
+107.71 - If you fail the exam, you cannot take the exam again within 14 days. 
+107.77 - If you change address, you need to notify FAA within 30 days. 
+
+Visual observer's sole task is to watch for aircraft and report potential hazards. The license goes based on the date you passed the exam not the date in which your license was delivered. Digital Pilot Examiner is responsible for processing applications to Part 107. 
 
 ### Part 107 Sub Part D - Operations Over Human Beings
+Only applies for flying over people or people in moving vehicles. You will need an aircraft with specific certifications to fly over humans. FAA has a website which tells if you an aircraft has been certified for OOP (Operations Over People).
+
+In order to be able to fly over people, your aircraft must fall under one of the following categories
+* Category 1
+* Category 2
+* Category 3
+* Category 4 - Usually for very large aircraft. Requires prior authorization.
+
+When flying over people, there are two kinds of recognized flights
+
+* Sustained flight
+* Transition flight 
+
+FAA also cares about whether or not you are flying over an open air assembly.
+
+Sustained flight includes the following
+
+* Hovering
+* Flying back and forth
+* Circling in such a way that the aircraft remains above some part of the assembly. 
+
+Sustained flight doesn't include brief, one-time transiting over a portion of assembled gathering where the transit is merely incidental to a point to point operation unrelated to the assembly. 
+
+Previously, no flights over people was allowed. But short transition flights (like crossing the road) is now allowed because it is probably less risky than circling over them. 
+
+FAA has not defined an open air assembly and will employ case by case approach. An example of an open air assembly would be concerts, sporting events, parades, protests, political rallies, community festivals, parks and beaches during certain events etc. FAA's guidance on open air assembly is to evaluate it based on the density of people not directly involved in the operation and the size of the operational area. Open air assemblies are often associated with public spaces. It is less likely to be an open assembly if you do not have spectators or you are over individuals. 
+
+Means of compliance - The document submitted to the FAA on how the aircraft manufacturer is going to comply with these requirements. The documents will often include test, analysis or inspection that will be sent to FAA for review and approval. 
+
+Declaration of compliance - Tells the FAA which make/model/series of aircraft that are compliant along with the range of serial numbers. 
+
+If the aircraft is uncategorized, you cannot fly over people or moving objects with people in it. 
+
+There are four categories
+* Category 1 - The aircraft must be 0.05 lbs (or 250 grams) or less during takeoff and throughout the duration of the flight. The drone cannot contain any exposed rotating parts that would lacerate human skins on impact. To operate over human assemblies, the aircraft must meet remote ID requirements. It doesn't have to officially approved and cerfified by FAA. 
+
+* Category 2 - The aircraft cannot cause injury to a human being equivalent to 11 foot pounds of kinetic energy upon impact. It doesn't contain any exposed rotating parts. It doesn't contain safety defects. The aircraft has to be labeled as category 2. It is listed with an FAA accepted declaration of compliance. You will get a system description (think of it as the pilot operating handbook) and a list of modifications that are allowed to be done that won't affect the certification. Also, need remote ID if flying over open air assemblies. 
+* Category 3 - The aircraft has to be labeled as category. Approved by FAA. Cannot operate over open air assemblies. To operate over human beings using a category three - the operation must take place over a closed/restricted access site and all the human beings are on notice that the aircraft might be flying over them or all the human that the aircraft flies over must be part of the operation or the humans are under cover. 
+The aircraft cannot cause damage more than 25 foot pounds of kinetic energy on impact. 
+Does not contain any exposed rotating parts that would lacerate humans. Cannot contain safety defects. You will also receive an operating manual and list of modications that are allowed.
+* Category 4 - Category 4 aircraft must receive an airworthiness certificate. Must be operated in accordance within the operating limitation. Must have maintainance, preventive maintanence, alterations and inspects. Must comply with remote ID requirements. 
+
+An aircraft can qualify for multiple categories. 
+
+To qualify for no moving parts regulations. Prop guards is the obvious solution. But adds weight. Automatic motor stop is the choice. 
+
+To qualify for category 3 operation over humans, you are required to have closed or restricted access areas. The remote pilot in command in required to ensure that no inadveterent or unauthorized access occurs. Physical barriers, personnel or both. FAA also provides guidance on how to provide notice. Suggested notice mechnisms - public notices, signage, flagging, a written notice posted at entrance or a verbal notice. Written notice is the best option because it creates a paper trail. 
+
+Operating over people at night is not prohibited. No specific distance from human beings is specified. But it is highly recommended. Always keep in mind about wind, gusts, precipitation and visibility. Also keep in mind that people and vehicles are always moving. 
+
+Flying over moving vehicles regulations are on top of flying over people regulations. So, you have to follow both to be compliant. The aircraft must be flying over a closed/restricted access site and everyone on the site and inside the moving vehicle must be on notice. The aircraft is not allowed to perform sustained flight over the moving vehicle. Vehicle is defined as any means of transportation whether or not it is motorized. Bicycles and watercraft are considered vehicles.  
+
+The people who you might be flying over needs to be provided notice. You don't actually need their consent. You can use a category 3 to fly over people as long as the area is restricted access and the people are inside are on notice. For category four, the owner of the aircraft is required to keep maintanence records. 
 
 ### Part 107 Sub Part E - Waivers
+FAA can provide waivers for regulations
+
+* Operating from a moving vehicle or aircraft
+* Waive the requirement to have anti collision requirements
+* Visual line of sight aircraft operation
+* Visual observer
+* Opeartion of multiple aircraft at once
+* Yielding the right of way
+* Operation over people
+* Operation in certain airspace - This is usually not possible because you can simply get authorization to fly into a certain airspace. 
+* Operating limitations for small unmanned aircraft
+* Opeartion over moving vehicles
+
+You will need to submit an application is faadronezone.faa.gov. 
+
+### Registration Requirements
+If you are over the age of 13, you have to register with your legal name. Fees are $5 per person if you are a hobbyist and $5 per aircraft for part 107. The aircraft cannot be registered in other countries. Only US citizens and permanent residents can register aircraft. For foreign nationals, only a certificate of ownership is issued. 
+
+Any changes in information must be provided in FAA Drone Zone with in 14 days. This includes address change, cancellation of registration because of sales, transfer, destruction or export. Aircraft registration is valid for three years. Renewals can be done upto six months before expiration. The unique registration number must be legibly found in the aircraft and must be displayed. 
+
+#### Remote ID
+Think about it is as a license plate for a drone. Identify aircraft as they fly.
+
+Complying with remote ID
+* Get an aircraft equipped with remote ID
+* Install a remote ID module on your old aircraft
+* Fly at an FAA Recognized Identification Area (FRIA)
+
+UAS cannot use ADSB. You cannot also install transponders for Squawk code. 
+
+Any aircraft that needs to be registered should have remote ID. That is any aircraft under 55 lbs. For aircraft less than 250 grams and are flown for purely recreational purposes, then registration and remote ID are not required. Public safety operations are also require remote ID compliance. 
+
+Remote ID contains the following information if it is built into the aircraft
+* Serial Number or Session ID
+* Latitude/Longitude/Altitude/Velocity
+* Latitude/Longitude/Altitude of control station
+* Emergency Status
+* Time Mark
+
+If you use a module, then the following information is broadcasted
+* Serial number of the module
+* Latitude, Longitude, Altitude and Velocity
+* Latitude, Longitude, Altitude of take off point
+* No emergency status
+* Time mark
+
+The registration datebase is only available to FAA and on request to law enforcement. The range of remote is several miles. Remote ID should be one from the moment of takeoff to shutdown. You have to make sure that the remote ID is functional before taking off. The broadcast must come directly from the aircraft. The remote ID systems have a self test functionality and can notify the pilot if the remote ID is not working. The operator must land the aircraft as soon as practical if the remote ID is not working. For modules, self test must be done manually. FRIA is an area where remote ID will not be required. 
+
+### NTSB Requirements
+NTSB requirement is on top of FAA requirement. Unmanned aircraft accident as an occurrence of death or serious injury. Serious injury is defined as the following
+* Requires hospitalization for more than 48 hours (within 7 days of the injury)
+* Results in fracture of any bone (except fingers, toes or nose)
+* Causes hemorrahages, nerve, muscle or tendon damage
+* Involves any internal organs
+* Involves second or third degress burns (or burns affecting more than 5% of the body surface)
+
+The operator must immediately report to NTSB 
+* Aircraft accident
+* Flight control malfunction or failure
+* In flight fire
+* Aircraft collision in flight
+* Damage to the property, other than aircraft, estimated to exceed $25,000 or total loss which ever is less. 
+
+You can fly without remote ID with authorization from the administrator. This is how the FRIA are was created. FAA maintains a DOC list where all the remote ID compliant aircraft are present. The aircraft's registration contains the serial number used for identification. 
+
+## Airport Operations
+Airport is defined as any area where we an aircraft can land or take off. Airports can be towered or un-towered. There are civil airports, military airports and private airports. 
+
+## Types of Airports
+### Towered Airport
+Has air traffic control (ATC) tower. ATC provides orderly and expeditious flow of aircraft. Radio communication is mandatory for towered airports. 
+
+### Non-Towered Airport
+There are more non-towered airports in the US than tower. Radio communication is not required in non-towered airports. But a frequency called Unicom or CTAF (Community Traffic Advisory Frequency) is available. 
+
+## True vs Magnetic North
+* True North - Points to the north pole. Most maps use true north. 
+* Magnetic North - Not at the same location as true north or at north pole. Magnetic North is constantly moving. But aircraft instruments align with the magnetic north. 
+
+Variation is the degree of seperation between the true north and magnetic north. Variation is talked about from degrees to east or west. Add or subtract variation to get get true north. 
+
+Use east is least, west is best. Subtract for east, add for west. True north plus or minus gives you magnetic north. 
+
+## Runway Orientation
+Runways are identified using 2 digit number based on magnetic north. We use the word "heading". Heading means what you are pointing to. 2 digit numbers are retrieved by chopping off the last digit and if it is below five, round down. If it is five or above, you round up. Runway with closed runways have crosses on the runway. 
+
+## Traffic Pattern
+## Wind & Pattern Indicators
+## Airport Signs
+### Mandatory
+### Location And Direction
+## Airport Beacon
+## Airport Data
