My notes from all the courses I am currently taking

--- a/books/flying/drones/faa-107.md
+++ b/books/flying/drones/faa-107.md
@@ -530,9 +530,75 @@ Use east is least, west is best. Subtract for east, add for west. True north plu
 Runways are identified using 2 digit number based on magnetic north. We use the word "heading". Heading means what you are pointing to. 2 digit numbers are retrieved by chopping off the last digit and if it is below five, round down. If it is five or above, you round up. Runway with closed runways have crosses on the runway. 
 
 ## Traffic Pattern
+Traffic is organized in certain ways in an airport. Traffic pattern have multiple legs or sections in it. Most legs are between 1000 feet and AGL (above ground level). Manned pilots will communicate that they are about 10 miles away to indicate entrance into an pattern. 
+
+* Upwind - Take off leg. Always want to take off into the wind for better performance
+* Departure - Departure leg of the pattern
+* Crosswind - This leg is named so because the aircraft will be subject to crosswind. This leg is usually associated with the departure of the aircraft.
+* Entry - This leg is the entrance in the traffic pattern. 
+* Downwind - This leg is also a crosswind leg but involved in the landing of aircraft
+* Base - This leg is the final leg before we come into land
+* Final - The leg where we land
+
+By default, the landing pattern is left turns. The best way to figure out which way to land is to use the segmented circles that are visible from the air. Use that information along with the wind indicators to figure out which runway to use. Remember that you want to take off into the wind and land into the wind as well. 
+
 ## Wind & Pattern Indicators
+There are three kinds of wind direction indicators
+* Wind sock or cone - Direction of the wind sock gives you the direction of the wind. The wind is leaving from the tail. So, the wind is blowing in the direction opposite to the tail of the wind sock. The rings in the windsock tell you the relative velocity of wind. Each ring adds about five knots. If the wind is gusty, you might notice that the sock sometimes fully fills up. The windsock has a 360 degree rotation. The angle of the wind is the opposite of the angle of the tail of the sock. A wind sock with a 30 degree angle is actually indicating a wind of 270 degree westward wind. 
+* Tetrahedron - Tetrahedron's pointy thing is pointed in the direction of the wind. So use it land from the large end of the tetrahedron into the small end. 
+* T - It looks like a mini airplane. The wing of the T points in the direction of the wind. Align you aircraft with the T as you come into land. 
+
 ## Airport Signs
-### Mandatory
-### Location And Direction
-## Airport Beacon
+Two different markings can be found in airports
+* Taxiways - If you observe a black box, it is the name of the taxiway. It might have directions to other taxiways. Taxiways have letters as identifiers. Runways have numbers. Taxiway markings and runway markings can be found in conjunction in many places. There is often a hold short line. For manned pilots, you have to get a clearance to cross the hold short line. Hold short line is often indicated with double yellows and a dashed black line. Taxiways might also have do not enter signs. 
+* Runways - Runways also have markings. The markings usually indicate the number of the runway and might contain markings on where you are on the runway. It might also have signage to the taxiways that branch off the runway. 
+
+## Aircraft Beacons
+Aircraft beacons will be visible at night and when weather is below VFR minimums. Civilian airports have a white and green while military airports have a white, green and white light. If it is a water airport, you will have a white and yellow light. if you are at an heliport, you will have white, green and yellow beacon light. 
+
+## Operating Near Airports
+You are not allowed to interfere with the operations of the airport. Become aware of traffic patterns and do not operate especially near short finals. Airports have many restricted areas. You need to have proper access and authorization for those areas if you need to operate in those areas. You need a SIDA. 
+
+## Operating Near Wires
+Wires are invisible from the ground and might be invisible from the cameras on board as well. Helicopter pilots especially need to be aware of these. Watch for lead (or guy) wires. UAS pilots who are doing inspections especially need to be aware of this. Always do a preflight and use a sectional chart to plot out any obstacles. 
+
+## Other Operational Considerations
+* Lasers are often pointed towards aircraft. This is prohibited by FAA. But many people keep doing this. So, report it to FAA if you experience a laser attack. 
+* You also need to pay close attention when operating near power plants or other places that produce thermal flumes. These have the potential to cause turbulence and the heat might actually destroy the onboard electronics/motors.
+* Avoid any areas where wildlife is present. This information is usually available in NOTAMs or by ATC. 
+* Avoid any areas where unmanned or manned balloons are in operation. Use sectional chart to figure out.  
+
 ## Airport Data
+There are four sources of airport information
+* Chart Supplement
+* NOTAMs
+* ATIS
+* Aeronautical Charts 
+
+Let's take a look at each one separately
+
+### Chart Supplement
+Provides detailed information about each airport. It used to be called AFD. It is divided into nine different regions. It is available to download for free from FAA. It is published every 56 days. 
+
+#### NOTAMs
+Notice to Air Missions. Has very critical information. But it is difficult to read unfortunately. The information is temporary information. There are specific NOTAMs for UAS operators called DROTAMS. Always check for NOTAMs before you fly. NOTAMs can be found online on the FAA site. 
+
+Common information that can be found on NOTAMs
+* Hazards (air shows, parachute jumps, kite flyings and rocket launches)
+* VIP flights
+* Military exercises with resulting airspace restrictions
+* Temporary obstructions or erections near the airfield
+* Passage of flocks of birts through airspace (BIRDTAM)
+* Notification of volcanic ash or other dust contamination (an ASHTAM)
+
+There are four kinds of NOTAMs
+* NOTAM (D) - Information about navigational facilities. E.g Taxiway closures, personnel or equipment near runways, issues with lighting or other aids. 
+* FDC NOTAMs - Issued by National Flight Data Center. Usually contain changes to charts, procedures and airspace usage. Also includes potential temporary flight restrictions. 
+* Pointer NOTAM - A NOTAM that refers to another NOTAM
+* Military NOTAM - Only applicable to military
+
+#### ATIS
+Stands for Automated Terminal Information Service. Provides information about the current local weather condition at an airport. It is updated usually once an hour. It is played on the radio with a one letter alphabet. Some information might be omitted from ATIS broadcast if the ceiling is about 5000 ft and visibility is five statute miles or more. 
+
+## Radio Communications
+UAS operators are not allowed to transmit on the frequency. Only manned aircraft can transmit. But you are allowed to listen unless and until you have an emergency.
